# sdk

./: .gitignore  README.md  cspell.json
clients/python/: README.md  pyproject.toml
clients/python/flexbit/: __init__.py  lib.py
clients/python/flexbit/interfaces/: __init__.py  control.interfaces.py  export.py  ingestion.interfaces.py  types.py
clients/python/sample/: control-demo.py  device-demo.py
clients/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/typescript/sample/: .env-example  control-demo.ts  device-demo.ts
clients/typescript/src/: index.ts  lib.ts
clients/typescript/src/interfaces/: control.interfaces.ts  export.ts  ingestion.interfaces.ts  types.ts
