[project]
name = "flexbit-sdk"
version = "1.0.3"
description = "FlexBIT SDK client for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
keywords = ["flexbit", "energy", "api", "client", "rec"]
dependencies = ["kafka-python>=2.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/sample", "/.gitignore", "/uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["flexbit"]
